--- a/test.html
+++ b/test.html
@@ -4,6 +4,27 @@
 	<meta charset="utf-8">
 	<title>NLOOP TEST</title>
 	<script src="nloop.js"></script>
+	<script>
+	
+		var loop1 = new NLoop(0,2, function(i, data){ console.log("A " + i); }, 1);
+		var loop2 = new NLoop(0,2, function(i, data){ console.log("   B " + i); }, 2);
+		var loop3 = new NLoop(0,2, function(i, data){ console.log("   	   C" + i); }, 3);
+		var loop4 = new NLoop(0,2, function(i, data){ console.log("   	    	D" + i); }, 4);
+
+		loop1.add(loop2);
+		loop2.add(loop3);
+		loop3.add(loop4);
+
+		loop1.addEventListener("COMPLETE", completeHandler);
+
+		function completeHandler(event) {
+			console.log("COMPLETE EVENT HEARD");
+			event.target.removeEventListener("COMPLETE", completeHandler);
+		}
+
+		loop1.start();
+	
+	</script>
 </head>
 <body>
 
