--- a/test.html
+++ b/test.html
@@ -6,10 +6,10 @@
 	<script src="nloop.js"></script>
 	<script>
 	
-		var loop1 = new NLoop(0,2, function(i, data){ console.log("A " + i); }, 1);
+		var loop1 = new NLoop(0,1, function(i, data){ console.log("A " + i); }, 1);
 		var loop2 = new NLoop(0,2, function(i, data){ console.log("   B " + i); }, 2);
-		var loop3 = new NLoop(0,2, function(i, data){ console.log("   	   C" + i); }, 3);
-		var loop4 = new NLoop(0,2, function(i, data){ console.log("   	    	D" + i); }, 4);
+		var loop3 = new NLoop(0,3, function(i, data){ console.log("   	   C" + i); }, 3);
+		var loop4 = new NLoop(0,4, function(i, data){ console.log("   	    	D" + i); }, 4);
 
 		loop1.add(loop2);
 		loop2.add(loop3);
@@ -22,13 +22,14 @@
 			event.target.removeEventListener("COMPLETE", completeHandler);
 		}
 
-		loop1.start();
 	
 	</script>
 </head>
 <body>
 
-<input type="button" onclick="loop1.run();" />
+<input type="button" value="START" onclick="loop1.start();" />
+<input type="button" value="PAUSE" onclick="loop1.pause();" />
+
 
 </body>
 </html>
